[package]
name = "libbeta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "beta"
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
loader = { path = "../loader" }
alphacommons = { path = "../alphacommons" }
